# awesomelify

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yaml
src/: lib.rs  loader.rs  main.rs  markdown.rs
src/cli/: mod.rs
src/server/: mod.rs
src/server/routes/: api_export.rs  api_import.rs  homepage.rs  mod.rs  repo_list.rs  repo_page.rs  search.rs
src/server/ui/: mod.rs
src/source/: github.rs  loader.rs  mod.rs
src/storage/: fs.rs  mod.rs
