[package]
name = "awesomelify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-trait = "0.1.81"
axum = "0.7.5"
base64 = "0.22.1"
cercis = "1.2.0"
clap = { version = "4.5.11", features = ["env", "derive"] }
futures = "0.3.30"
pulldown-cmark = "0.11.0"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_path_to_error = "0.1.16"
serde_urlencoded = "0.7.1"
time = { version = "0.3.36", features = ["macros", "formatting", "parsing", "serde"] }
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "time"] }
url = { version = "2.5.2", features = ["serde"] }
